src/frontend/ts/tests/fixtures/invalid_modifiers/wrangler.cloesce.ts
// @ts-nocheck
// InvalidAttributeModifier

@WranglerEnv
export class {
  private bar: number;
}
